New year new repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,23 +5,13 @@ project(anui)
 set(CMAKE_CXX_STANDARD 23)
 
 
-
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    message(STATUS "DEBUG")
-    enable_testing()
-    add_subdirectory(tests)
-endif()
-
-
 if(WIN32)
 message(STATUS ">>> Compiling for Windows with WIN32")
 set(OS msw)
 set(OS_COMPILE_DEFINITION ANUI_WIN32)
 
 elseif(APPLE)
-message(STATUS ">>> Compiling for Apple with COCOA")
-set(OS cocoa)
-set(OS_COMPILE_DEFINITION ANUI_APPLE)
+message(FATAL_ERROR "Anui does not support Apple")
 
 elseif(UNIX)
 message(STATUS ">>> Compiling for Linux with x11")
@@ -34,7 +24,7 @@ endif()
 
 
 add_library(${PROJECT_NAME} 
-     ./src/${OS}/window.cpp
+     # ./src/${OS}/window.cpp
     #./src/${OS}/FloatingWindow.cpp 
     #"src/events.cpp"
     #"src/${OS}/Application.cpp"
@@ -47,6 +37,7 @@ PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
+
 option(CONSOLE "Create int main and log everything to the console instead of a popup window" ON)
 set(CONSOLE ON)
 
@@ -55,8 +46,25 @@ set(CONSOLE ON)
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${OS_COMPILE_DEFINITION})
 
 if(CONSOLE)
-message(STATUS " >>> Compiling for console")
-target_compile_definitions(${PROJECT_NAME} PUBLIC ANUI_CONSOLE)
+	message(STATUS " >>> Compiling for console")
+	target_compile_definitions(${PROJECT_NAME} PUBLIC ANUI_CONSOLE)
 else()
-message(STATUS " >>> Compiling for desktop")
+	message(STATUS " >>> Compiling for desktop")
+endif()
+
+
+target_compile_definitions(${PROJECT_NAME}
+	PUBLIC ${ANUI_COMPILE_DEFINITIONS})
+
+#
+# Examples ----------------------------------------------
+#
+
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+
+
+	add_executable(basic_example ./examples/basic.cpp)
+
+	target_link_libraries(basic_example anui)
+
 endif()
